all pages completed

--- a/contact.html
+++ b/contact.html
@@ -17,9 +17,9 @@
                     <a href="index.html"><img src="https://handyhelpforhire.com.au/assets/img/white-logo.png" alt=""></a>
                 </div>
                 <div class="nav-items">
-                    <ul class="nav-ul">
+                     <ul class="nav-ul">
                         <li><a href="index.html">HOME</a></li>
-                         <div class="dropdown">
+                        <div class="dropdown">
                             <button class="btn btn-secondary dropdown-toggle service-btn" type="button" data-bs-toggle="dropdown">
                                 SERVICES
                             </button>
@@ -39,187 +39,61 @@
             </nav>
         </div>
     </section>
-    <section class="hero-wrapper">
-        <div class="hero-bg-images">
-            <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="https://handyhelpforhire.com.au/assets/img/new_images/doggy%20door.jpg" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="https://handyhelpforhire.com.au/assets/img/new_images/backyard.png" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="https://handyhelpforhire.com.au/assets/img/new_images/garden%20maint.jpg" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="https://handyhelpforhire.com.au/assets/img/new_images/pool%20hedge.jpg" class="d-block w-100" alt="...">
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="carousel-text">
-                    <h1>Fixing the Little Things <i>Making a</i> Big <br> Difference! Small Jobs, Big Results</h1>
-                    <p><i>WE TREAT</i> every projects as unique, offering tailored solutions to meet your needs.</p>
-                    <a href="#"><button class="white-bg-button">Book An Appointment Today! <i class="fa-solid fa-arrow-down rotate-45"></i></button></a>
-                </div>
+    <section class="breadcrumb-wrapper">
+        <div class="container">
+            <div class="breadcrumb-container">
+                <h1>Contact Us</h1>
+                <p><a href="index.html">Home</a> > <span>Contact Us</span></p>
             </div>
         </div>
     </section>
-    <section class="about-wrapper">
-        <div class="container about">
-            <div class="about-top">
-                <div class="about-left">
-                    <h6>About Us</h6>
-                   
-                    <h1>Handy Help For Hire</h1>
-                    <p>Welcome to Handy Help For Hire, your trusted partner for all those small odd jobs around the home. We specialize in providing reliable and affordable solutions for residental properties. Whether it's garden maintenance, home repairs, or a range of small tasks, we've got you covered! <br> <br> At Handy Help For Hire, we understand how busy life can get, especially when you're juggling work, family, and home responsibilities. That's why we're here to make your life a little easier. Our team is dedicated to offering trustworthy and efficient services, designed with you in mind.</p>
-                </div>
-                <div class="about-right">
-                    <img src="https://handyhelpforhire.com.au/assets/img/new_images/fixture%20handy.jpg" alt="">
-                </div>
-            </div>
-            <hr>
-            <div class="about-bottom">
-                <div class="about-bottom-left">
-                    <p>We particularly cater for people who need and extra hand around the house. Whether you're looking for help with simple repairs, tidying up your garden, or tackling household maintenance tasks, we are just a call away. We pride ourselves on being approachable, reliable, and committed to making your home or office the best it can be.</p>
-                    <a href="#"><button class="white-bg-button">Services Area <i class="fa-solid fa-arrow-down rotate-45"></i></button></a>
-                </div>
-                <div class="about-bottom-right">
-                    <div class="progress-container">
-                        <div class="progress-circle-1">
-                            <div class="icon"><i class="fa-solid fa-hammer"></i></div>
-                            <svg class="circle" width="100" height="100">
-                                <circle cx="50" cy="50" r="45" stroke="#333" stroke-width="8" fill="none" />
-                                <circle cx="50" cy="50" r="45" stroke="#fff" stroke-width="8" fill="none"
-                                        stroke-dasharray="282" stroke-dashoffset="40" />
-                            </svg>
-                        </div>
-                        <p class="title">SPENT PER PROJECT</p>
-                        <p class="subtitle">Reliable</p>
-                    </div>
-                    <div class="progress-container">
-                        <div class="progress-circle-2">
-                            <div class="icon"><img src="https://handyhelpforhire.com.au/assets/img/icons/carpentry.png" alt=""></div>
-                            <svg class="circle" width="100" height="100">
-                                <circle cx="50" cy="50" r="45" stroke="#333" stroke-width="8" fill="none" />
-                                <circle cx="50" cy="50" r="45" stroke="#fff" stroke-width="8" fill="none"
-                                        stroke-dasharray="282" stroke-dashoffset="30" />
-                            </svg>
-                        </div>
-                        <p class="title">Basic Concept</p>
-                        <p class="subtitle">Efficient</p>
-                    </div>
-                    <div class="progress-container">
-                        <div class="progress-circle-3">
-                            <div class="icon"><i class="fa-solid fa-thumbs-up"></i></div>
-                            <svg class="circle" width="100" height="100">
-                                <circle cx="50" cy="50" r="45" stroke="#333" stroke-width="8" fill="none" />
-                                <circle cx="50" cy="50" r="45" stroke="#fff" stroke-width="8" fill="none"
-                                        stroke-dasharray="282" stroke-dashoffset="0" />
-                            </svg>
-                        </div>
-                        <p class="title">INSURED AND TRUSTED</p>
-                        <p class="subtitle">Guaranteed</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="service-wrapper">
-        <div class="container service-headings">
-            <p>SERVICES</p>
-            <h1>Our Popular Services</h1>
-        </div>
-        <div class="container service-images">
-            <div class="service-img-1">
-                <img src="https://handyhelpforhire.com.au/assets/img/new_images/painting4.jpg" alt="">
-                <h4>Painting</h4>
-                <p>Enquire Today</p>
-            </div>
-            <div class="service-img-2">
-                <img src="https://handyhelpforhire.com.au/assets/img/new_images/furniture%20assembly.jpg" alt="">
-                <h4>Installation and Maintenance</h4>
-                <p>Enquire Today</p>
-            </div>
-            <div class="service-img-3">
-                <img src="https://handyhelpforhire.com.au/assets/img/garden.jpg" alt="">
-                <h4>Garden Maintenance</h4>
-                <p>Enquire Today</p>
-            </div>
-        </div>
-        <div class="services-button">
-            <a href="#"><button class="white-bg-button">View All Services <i class="fa-solid fa-arrow-down rotate-45"></i></button></a>
-        </div>
-    </section>
-    <section class="why-choose-us-wrapper">
-        <div class="container why-choose-us-headings">
+    <section class="contact-information-wrapper">
+        <div class="container contact-information">
+            <h1>Information</h1>
+            <p>Reliable handyman services for your home. Contact us today!</p>
             <div class="row">
-                <div class="col-lg-6 why-choose-us-heading-left">
-                <p>When the Little Things Matter!</p>
-                <h1>Why Choose Us ?</h1>
-            </div>
-            <div class="col-lg-6 why-choose-us-heading-right">
-                <p>Our services are tailored to meet the needs of residental clients, with a focus on providing high-quality work at an affordable price. No task is too small, and we treat every job with the utmost care and professionalism.</p>
-            </div>
-            </div>
-        </div>
-        <div class="why-choose-us-images">
-            <div class="why-choose-us-img1">
-                <img src="https://handyhelpforhire.com.au/assets/img/Who-are-we/wcu-1.jpg" alt="">
-                <div class="image-content">
-                    <img src="https://handyhelpforhire.com.au/assets/img/icons/high-quality.png" alt="">
-                    <h2>Reliable, Trustworthy & Friendly Services</h2>
+                <div class="col-lg-4 dark">
+                    <img src="https://handyhelpforhire.com.au/assets/img/address.png" alt="">
+                    <h4>Coverage Area</h4>
+                    <p>Illawarra Region</p>
                 </div>
-            </div>
-            <div class="why-choose-us-img2">
-                <img src="https://handyhelpforhire.com.au/assets/img/Who-are-we/wcu-3.jpg" alt="">
-                <div class="image-content">
-                    <img src="https://handyhelpforhire.com.au/assets/img/icons/helmet.png" alt="">
-                    <h2>No Job is Too Small</h2>
+                <div class="col-lg-4 dark">
+                    <img src="https://handyhelpforhire.com.au/assets/img/email.png" alt="">
+                    <h4>Email</h4>
+                    <p>handyhelpforhire@gmail.com</p>
+                </div>
+                <div class="col-lg-4 dark">
+                    <img src="https://handyhelpforhire.com.au/assets/img/phone.png" alt="">
+                    <h4>Phone Number</h4>
+                    <p>0427 417 447</p>
                 </div>
             </div>
         </div>
     </section>
-    <section class="gallery-wrapper">
-        <div class="container gallery-headings">
-            <p>Gallery</p>
-            <h1>Our Recent Projects</h1>
-        </div>
-        <div class="container gallery-images">
-            <div class="gallery-img1">
-                <img src="https://handyhelpforhire.com.au/assets/img/gallery/bargophotos/IMG_3609.jpg" alt="">
-                <h4>Garden</h4>
-            </div>
-            <div class="gallery-img3">
-                <img src="https://handyhelpforhire.com.au/assets/img/gallery/gallery-2.webp" alt="">
-                <h4>Painting</h4>
-            </div>
-            <div class="gallery-img3">
-                <img src="https://handyhelpforhire.com.au/assets/img/gallery/gallery-3.webp" alt="">
-                <h4>Handyman</h4>
-            </div>
-        </div>
-        <div class="gallery-btn">
-            <a href="#"><button class="white-bg-button">View Gallery <i class="fa-solid fa-arrow-down rotate-45 "></i></button></a>
-        </div>
-    </section>
-    <section class="scroll-wrapper">
-        <div class="scroll-container">
-            <div class="scroll-text">
-                <span>Driveway</span>
-                <span>Flatpack</span>
-                <span>Maintenance</span>
-                <span>Residental</span>
-                <span>Handyman</span>
-                <span>Furniture</span>
-                <span>Driveway</span>
-                <span>Flatpack</span>
-                <span>Maintenance</span>
-                <span>Residental</span>
-                <span>Handyman</span>
-                <span>Furniture</span>
-            </div>
+    <section class="contact-quote-wrapper">
+        <div class="container contact-quote">
+            <h1>Get A Quote</h1>
+            <p>Need Assistance? Request a Free Consultation Today!</p>
+            <form action="">
+                <div class="row">
+                    <div class="col-lg-4 mb-3">
+                        <input type="text" placeholder="Your name*" class="form-control">
+                    </div>
+                    <div class="col-lg-4">
+                        <input type="email" placeholder="Your email*" class="form-control">
+                    </div>
+                    <div class="col-lg-4 ">
+                        <input type="number" placeholder="Your Number*" class="form-control">
+                    </div>
+                </div>
+                <div class="col-lg-12 mb-3">
+                    <input type="subject" placeholder="Subject*" class="form-control">
+                </div>
+                <div class="col-lg-12 mb-3">
+                    <textarea name="" id="" placeholder="Your message*" class="form-control"></textarea>
+                </div>
+                <button class="white-bg-button">Send Message</button>
+            </form>
         </div>
     </section>
     <section class="footer-wrapper">
@@ -279,8 +153,8 @@
             </div>
         </footer>
     </section>
+    
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js
-"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 </body>
 </html>
