hover effects added on home page

--- a/index.html
+++ b/index.html
@@ -188,15 +188,15 @@
         </div>
         <div class="container gallery-images">
             <div class="gallery-img1">
-                <img src="https://handyhelpforhire.com.au/assets/img/gallery/bargophotos/IMG_3609.jpg" alt="">
+                <img src="https://handyhelpforhire.com.au/assets/img/gallery/bargophotos/IMG_3609.jpg" alt="" class="rotate-on-hover">
                 <h4>Garden</h4>
             </div>
             <div class="gallery-img3">
-                <img src="https://handyhelpforhire.com.au/assets/img/gallery/gallery-2.webp" alt="">
+                <img src="https://handyhelpforhire.com.au/assets/img/gallery/gallery-2.webp" alt="" class="rotate-on-hover">
                 <h4>Painting</h4>
             </div>
             <div class="gallery-img3">
-                <img src="https://handyhelpforhire.com.au/assets/img/gallery/gallery-3.webp" alt="">
+                <img src="https://handyhelpforhire.com.au/assets/img/gallery/gallery-3.webp" alt="" class="rotate-on-hover">
                 <h4>Handyman</h4>
             </div>
         </div>
